[project]
name = "eightdad"
version = "0.1.1"
readme = "README.md"
description = "Chip-8 interpreter which might one day also have other tools"
authors = [
    {name="pushfoo"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators"
]

dependencies = [
    'bitarray==2.4.1',
    'arcade==3.0.0dev20',
    'asciimatics==1.14.0'
]


[project.urls]
Homepage = "https://github.com/pushfoo/eightdad"
Issues = "https://github.com/pushfoo/eightdada/issues"
Source = "https://github.com/pushfoo/eightdad"


[project.optional-dependencies]
dev = [
    'pytest>=7.1,<8'
]

[project.scripts]
eightdad = "eightdad.frontend.gl:main"
eightdad-tui = "eightdad.frontend.tui:main"

[tool.setuptools.packages.find]
include = ["eightdad", "eightdad.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["doc", ".venv", "env", "dist"]
